--- a/src/app/project/executive/executive.page.html
+++ b/src/app/project/executive/executive.page.html
@@ -18,14 +18,14 @@
 <ion-content>
 	<ion-tabs>
 		<ion-tab-bar slot="top">
-			<ion-tab-button tab="summary" selected>
+			<ion-tab-button tab="summary" >
 				<ion-icon name="home-outline"></ion-icon>
 				<ion-label>Summary</ion-label>
 			</ion-tab-button>
 
-			<ion-tab-button tab="achievemennts" disabled>
+			<ion-tab-button tab="achievements" disabled>
 				<ion-icon name="medal-outline"></ion-icon>
-				<ion-label>Achievemennts</ion-label>
+				<ion-label>Achievements</ion-label>
 				<ion-badge>6</ion-badge>
 
 			</ion-tab-button>
@@ -43,7 +43,7 @@
 				<ion-icon name="analytics-outline"></ion-icon>
 				<ion-label>Evolution</ion-label>
 			</ion-tab-button>
-			<ion-tab-button tab="team" disabled>
+			<ion-tab-button tab="team">
 				<ion-icon name="people-circle-outline"></ion-icon>
 				<ion-label>Team</ion-label>
 			</ion-tab-button>
