--- a/src/app/project/executive/summary/popover-business-canvas/popover-business-canvas.component.html
+++ b/src/app/project/executive/summary/popover-business-canvas/popover-business-canvas.component.html
@@ -1,67 +1,17 @@
-	<div class="topPart"  >
-		<img  [src]="topPart.img" />
-		<div class="overlay ion-padding">
-			<h1><ion-text>{{topPart.title }}</ion-text></h1>
-			<h2><ion-text  >{{topPart.subTitle }}</ion-text></h2>
-			<div  class="explanations" >
-				<p  >{{topPart.guidance }}</p>
-			</div>
-			<ion-text (click)="switchExampleDisplay()">
-				<ion-icon name="caret-forward-outline" *ngIf="showExample ===false"></ion-icon>
-				<ion-icon name="caret-down-outline" *ngIf="showExample ===true"></ion-icon>{{'PROJECT_SUMMARY.ShowExample' | translate }}
-			</ion-text>
-			<div class="example" *ngIf="showExample ===true">
-				<p>{{topPart.example}}</p>
-			</div>
-		</div>
+<div class="topPart"  >
+	<img  [src]="topPart.img" />
+	<div class="overlay ion-padding">
+		<h1><ion-text>{{topPart.title }}</ion-text></h1>
+		<h2><ion-text  >{{topPart.subTitle }}</ion-text></h2>
+		<div  class="explanations" >
+			<p  >{{topPart.guidance }}</p>
+		</div>			
 	</div>
-	<ion-content class="ion-padding">
-		<ion-item *ngIf="type ==='problem' " >
-			<ion-label>{{'PROJECT_SUMMARY.BusinessCanvasProblem' | translate }}</ion-label>
-			<ion-textarea name="problem" [(ngModel)]="project.businessCanvas.problem" placeholder="Enter more information here..."></ion-textarea>
-		</ion-item>
-		<ion-item *ngIf="type ==='existingAlternatives' " >
-			<ion-label>{{'PROJECT_SUMMARY.BusinessCanvasExistingAlternatives' | translate }}</ion-label>
-			<ion-textarea name="existingAlternatives"[(ngModel)]="project.businessCanvas.existingAlternatives" placeholder="Enter more information here..."></ion-textarea>
-		</ion-item>
-		<ion-item *ngIf="type ==='solution' " >
-			<ion-label>{{'PROJECT_SUMMARY.BusinessCanvasSolution' | translate }}</ion-label>
-			<ion-textarea name="existingAlternatives"[(ngModel)]="project.businessCanvas.solution" placeholder="Enter more information here..."></ion-textarea>
-		</ion-item>
-		<ion-item *ngIf="type ==='keyMetrics' " >
-			<ion-label>{{'PROJECT_SUMMARY.BusinessCanvasKeyMetrics' | translate }}</ion-label>
-			<ion-textarea name="keyMetrics" [(ngModel)]="project.businessCanvas.keyMetrics" placeholder="Enter more information here..."></ion-textarea>
-		</ion-item>
-		<ion-item *ngIf="type ==='usp' " >
-			<ion-label>{{'PROJECT_SUMMARY.BusinessCanvasUniqueValueProposition' | translate }}</ion-label>
-			<ion-textarea name="usp" [(ngModel)]="project.businessCanvas.usp" placeholder="Enter more information here..."></ion-textarea>
-		</ion-item>
-		<ion-item *ngIf="type ==='unfairAdvantage' " >
-			<ion-label>{{'PROJECT_SUMMARY.BusinessCanvasUnfairAdvantage' | translate }}</ion-label>
-			<ion-textarea name="unfairAdvantage" [(ngModel)]="project.businessCanvas.unfairAdvantage" placeholder="Enter more information here..."></ion-textarea>
-		</ion-item>
-		<ion-item *ngIf="type ==='channels' " >
-			<ion-label>{{'PROJECT_SUMMARY.BusinessCanvasChannels' | translate }}</ion-label>
-			<ion-textarea name="channels" [(ngModel)]="project.businessCanvas.channels" placeholder="Enter more information here..."></ion-textarea>
-		</ion-item>
-		<ion-item *ngIf="type ==='customerSegmentation' " >
-			<ion-label>{{'PROJECT_SUMMARY.BusinessCanvasCustomerSegmentation' | translate }}</ion-label>
-			<ion-textarea name="customerSegmentation" [(ngModel)]="project.businessCanvas.customerSegmentation" placeholder="Enter more information here..."></ion-textarea>
-		</ion-item>
-		<ion-item *ngIf="type ==='earlyAdopters' " >
-			<ion-label>{{'PROJECT_SUMMARY.BusinessCanvasEarlyAdopters' | translate }}</ion-label>
-			<ion-textarea name="earlyAdopters" [(ngModel)]="project.businessCanvas.earlyAdopters" placeholder="Enter more information here..."></ion-textarea>
-		</ion-item>
-		<ion-item *ngIf="type ==='costStructure' " >
-			<ion-label>{{'PROJECT_SUMMARY.BusinessCanvasCostStructure' | translate }}</ion-label>
-			<ion-textarea name="costStructure" [(ngModel)]="project.businessCanvas.costStructure" placeholder="Enter more information here..."></ion-textarea>
-		</ion-item>
-		<ion-item *ngIf="type ==='revenueStreams' " >
-			<ion-label>{{'PROJECT_SUMMARY.BusinessCanvasRevenueStreams' | translate }}</ion-label>
-			<ion-textarea name="revenueStreams" [(ngModel)]="project.businessCanvas.revenueStreams" placeholder="Enter more information here..."></ion-textarea>
-		</ion-item>
+</div>
+<ion-content class="ion-padding">
+	<ion-text><h1>{{'PROJECT_SUMMARY.ShowExample' | translate }}</h1></ion-text>
 
-		<div class="positionBottom">
-			<ion-button expand="full" color="primary" (click)="save()">{{'PROJECT_SUMMARY.ProjectSave' | translate }}</ion-button>
-		</div>
-	</ion-content>
+	<div class="example" >
+		<p>{{topPart.example}}</p>
+	</div>
+</ion-content>
