--- a/src/app/project/project.page.html
+++ b/src/app/project/project.page.html
@@ -2,24 +2,24 @@
   	<ion-toolbar>
   		<ion-title  class="headerTitle">
   			<img src="assets/images/logo.svg" class="logo ion-margin-end"  [routerLink]="['/entrepreneur']">
-  			<span  [routerLink]="['/entrepreneur']">{{'LANDINGPAGE.Title' | translate}}</span></ion-title>
-  			<app-user-avatar slot="end"></app-user-avatar>
-  		</ion-toolbar>
-  	</ion-header>
-  	<ion-content>
-
-  		<ion-split-pane contentId="project-content" when="(min-width: 2500px)" class="sideMenu">
-  			<ion-menu contentId="project-content" type="push"  >
-    				<ion-content>
-            <ion-list >
-               <ion-item *ngFor="let p of pages; let i = index" (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
-                <ion-icon color="primary" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-                <ion-label> {{p.title}}</ion-label>
-              </ion-item>		
-          </ion-list>
-         
-        </ion-content>
-      </ion-menu>
-      <ion-router-outlet id="project-content"></ion-router-outlet>
-    </ion-split-pane>
-  </ion-content>
+  			<span  [routerLink]="['/entrepreneur']">{{'LANDINGPAGE.Title' | translate}}</span>
+      </ion-title>
+      <app-user-avatar slot="end"></app-user-avatar>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-split-pane contentId="project-content" when="(min-width: 2500px)" class="sideMenu">
+     <ion-menu contentId="project-content" type="push"  >
+      <ion-content>
+        <ion-list >
+         <ion-item *ngFor="let p of pages; let i = index" (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
+          <ion-icon color="primary" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+          <ion-label> {{p.title}}</ion-label>
+        </ion-item>		
+      </ion-list>
+      
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="project-content"></ion-router-outlet>
+</ion-split-pane>
+</ion-content>
