--- a/src/app/project/executive/summary/business-canvas-element/business-canvas-element.component.scss
+++ b/src/app/project/executive/summary/business-canvas-element/business-canvas-element.component.scss
@@ -12,14 +12,7 @@
 	min-height:248px;
 	background-color: var(--ion-color-light)
 }
-.cellClickable{
-	cursor:pointer;
-}
-.cellClickable:hover{
-	cursor:pointer;
-	background-color: var(--ion-color-light-shade);
-	color: var(--ion-color-light-contrast);
-}
+
 .highCell{
 	height:497px;
 	background-color: var(--ion-color-light)
@@ -29,4 +22,14 @@
 }
 .stepDone{
 	color: var(--ion-color-primary);
+}
+.editIcon{
+	position: absolute;
+	right: 24px;
+	margin-top: 2px;
+	color: var(--ion-color-primary-contrast);
+	background: var(--ion-color-primary-shade);
+	height: 16px;
+	padding-left: 3px;
+	padding-right: 3px;
 }
